Add JS listener for Enter press

--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -6,8 +6,8 @@
   </p>
 
   <p>
-  <%= f.label :hook %>
-  <%= f.text_area :hook %>
+  <%= f.label :lyrics %>
+  <%= f.text_area :lyrics %>
   </p>
 
   <p>
@@ -16,7 +16,7 @@
   </p>
 
   <p>
-  <%= f.submit "Add new track" %>
+  <%= f.submit %>
   </p>
 
 <%end%>
