--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,5 +1,8 @@
 <h1> <%= @track.title %></h1>
 
-<h3>Hook bar indicator: <%= @track.barindicator %></h3>
-<h3> <%= @track.hook %></h3>
+<h3>bar indicator: <%= @track.barindicator %></h3>
+<h3> <%= @track.lyrics %></h3>
 
+<%= link_to "edit", edit_track_path(@track.id) %>
+
+<%= link_to "delete", @track, :method => :delete ,:confirm => "Are you sure?" %>
