--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @track do |f| %>
+<%= form_for(@track, :remote => true) do |f| %>
 
   <p>
   <%= f.label :barindicator %>
@@ -15,17 +15,15 @@
   <%= f.text_area :lyrics %>
   </p>
 
-<%#= form_for [@track, @verse], :remote => true do |f| %>
 
   <p>
-  <%#= f.label :verse %>
-  <%#= f.text_area :verse %>
-  </p>
-
-<%# end %>
-
-  <p>
-  <%= f.submit %>
+  <%= f.submit "Save Track" %>
   </p>
 
 <%end%>
+
+<div id="track">
+
+  <%=render :partial => 'tracks' %>
+
+</div>
