Enter enter Save

--- a/app/views/tracks/create.js.erb
+++ b/app/views/tracks/create.js.erb
@@ -1,2 +1,4 @@
 
-$ ("#track").html("<%= j(render(:partial => 'tracks')) %>");
+$("#track").html("<%= j(render(:partial => 'tracks')) %>");
+$("#new_track").attr("action", "/tracks/<%= @track.id %>");
+$("#new_track").attr("method", "put");
