add simple_format to show page

--- a/app/views/tracks/_tracks.html.erb
+++ b/app/views/tracks/_tracks.html.erb
@@ -1,4 +1,4 @@
   <h1> <%= @track.title %></h1>
 
   <h3><%=@track.barindicator %></h3>
-  <h3> <%= @track.lyrics %></h3>
+  <h3> <%= simple_format(@track.lyrics) %></h3>
