--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -7,3 +7,8 @@
 <%= link_to "edit", edit_track_path(@track.id) %>
 
 <%= link_to "delete", @track, :method => :delete ,:confirm => "Are you sure?" %>
+
+<script>
+  $('p').first().prepend('<h2>HOOK</h2>');
+  $( "p:gt(0)" ).prepend('<h2>VERSE</h2>');
+</script>
