Add hook button to verse

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -10,5 +10,6 @@
 
 <script>
   $('p').first().prepend('<h2>HOOK</h2>');
-  $( "p:gt(0)" ).prepend('<h2>VERSE</h2>');
+  $("p:gt(0)").prepend('<h2>VERSE</h2>');
+  $("p:gt(0)").append('<button type="button">HOOK</button>');
 </script>
