Comment before creating lyrics table

--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -12,7 +12,9 @@
 
   <p>
   <%= f.label :lyrics %>
-  <%= f.text_area :lyrics %>
+  <%= f.text_area :lyrics, placeholder: "[Hook 1]"%>
+
+
   </p>
 
 
