--- a/app/views/tracks/create.js.erb
+++ b/app/views/tracks/create.js.erb
@@ -2,3 +2,4 @@
 $("#track").html("<%= j(render(:partial => 'tracks')) %>");
 $("#new_track").attr("action", "/tracks/<%= @track.id %>");
 $("#new_track").attr("method", "put");
+$("#new_track").find('textarea').val('<%=@track.lyrics %>');
