--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -4,12 +4,24 @@
 
 </div>
 
+  <div id="lyric">
+    <%= form_for([@track, @lyric], :remote => true) do |f| %>
+  </div>
+
+    <div class="field">
+      <%= f.label :content %><br/>
+      <%= f.text_area :content %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+
+
+<% end %>
+
 <%= link_to "edit", edit_track_path(@track.id) %>
 
 <%= link_to "delete", @track, :method => :delete ,:confirm => "Are you sure?" %>
 
-<script>
-  $('p').first().prepend('<h2>HOOK</h2>');
-  $("p:gt(0)").prepend('<h2>VERSE</h2>');
-  $("p:gt(0)").append('<button type="button">HOOK</button>');
-</script>
+
