--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -24,4 +24,6 @@
 
 <%= link_to "delete", @track, :method => :delete ,:confirm => "Are you sure?" %>
 
-
+<div id="lyrics_partial">
+  <%=render :partial => 'lyrics' %>
+  </div>
