Add edit lyric button, not routing

--- a/app/views/tracks/_lyrics.html.erb
+++ b/app/views/tracks/_lyrics.html.erb
@@ -3,6 +3,7 @@
     <p>
     <%= lyric.content %>
     <br>
+    <%= link_to 'edit lyrics', [:edit, @track, @lyric.id] %>
   </p>
   </div>
-  <% end %>
+<% end %>
