--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -2,28 +2,30 @@
 
   <p>
   <%= f.label :barindicator %>
+  <br>
   <%= f.text_field :barindicator %>
   </p>
 
   <p>
   <%= f.label :title %>
+  <br>
   <%= f.text_field :title %>
   </p>
-
-  <p>
-  <%= f.label :lyrics %>
-  <%= f.text_area :lyrics %>
+      <%= f.label :lyrics %>
+    <br>
+      <%= f.text_area :lyrics %>
   </p>
-
-
-  <p>
-  <%= f.submit "Save Track" %>
-  </p>
+  
+  <br>
+  
+  <div id="save"> 
+    <p>
+    <%= f.submit "Save Track" %>
+    </p>
+  </div>
 
 <%end%>
 
 <div id="track">
-
   <%=render :partial => 'tracks' %>
-
 </div>
