--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,44 +9,91 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require foundation_and_overrides
+
  *= require_tree .
  */
 
 
- 
-body {
+html {
   background-color: black;
-  color: white;
-  font-family: helvetica; 
+  font-family: helvetica;
+  height: 100%;
+  width: 100%;
+  border: solid yellow;
 }
 
-h1 {
+
+h1,h2,h3 {
   font-size: 500;
   color: yellow;
   border: yellow;
 }
 
-#track_lyrics {
-  height: 300px;
-  width: 300px;
-  float: left;
-  
+#lyric_content {
+  height: 10%;
+  width: 90%;
+
 }
 
 #track_barindicator {
-  width: 200px;
+  width: 50%;
 }
 
 #track_title {
-  width: 200px;
+  width: 50%;
 }
 
 form {
   position: relative;
-  margin-left: 5px;
 }
 
 #save {
   position: relative;
   clear: both;
-} 
+}
+
+#actions {
+  clear:both;
+  position: relative;
+}
+
+/*Target iPhone's screen width*/
+
+/*Do not set fixed widths, use %*/
+    /*body{
+        -webkit-text-size-adjust:none;
+        font-family:Helvetica, Arial, Verdana, sans-serif;
+        padding:5px;
+    }
+/*Set widths to 100%*/
+    /*html{
+        clear:both!important;
+        display:block!important;
+        width:100% !important;
+        float:none!important;
+        margin:0!important;
+        padding:0!important;
+    }*/
+/*Create vertical navigation menu*/
+   /* #nav,#nav li{
+        float:none!important;
+        clear:both!important;
+        margin:0 0 20px 0!important;
+        display:block;
+        padding:0;
+        text-align:left!important;
+        width:100%;
+    }
+    #nav{
+        border:1px solid #ccc;
+        padding:5px;
+        border-radius:5px;
+    }
+    #nav li{
+        margin:0!important;
+    }
+    #nav li a{
+        display:block;
+    }
+*/
