this is a commit

--- a/app/views/tracks/_lyrics.html.erb
+++ b/app/views/tracks/_lyrics.html.erb
@@ -1,9 +1,9 @@
 <% @track.lyrics.each do |lyric| %>
   <div class="lyric">
     <p>
-    <%= lyric.content %>
+    <%= simple_format(lyric.content) %>
     <br>
-    <%= link_to 'edit lyrics', [:edit, @track, @lyric.id] %>
+    
   </p>
   </div>
 <% end %>
