--- a/app/views/lyrics/create.js.erb
+++ b/app/views/lyrics/create.js.erb
@@ -1,2 +1,3 @@
 $('#lyrics_partial').html("<%= j(render(:partial => 'tracks/lyrics'))%>");
-$('#lyric_content').val(" ");
+$("#new_lyric").attr("action", "/tracks/<%= @track.id %>");
+$("#new_lyric").attr("method", "put");
