Redid Tracks Show page

--- a/app/views/tracks/edit.html.erb
+++ b/app/views/tracks/edit.html.erb
@@ -1,4 +1,11 @@
 <h1>Edit Track info</h1>
 
+<div id="Track">
+  <%= render :partial => 'tracks' %>
+</div>
+
 <%= render "form"%>
 
+<div id="block">
+  <%= render :partial => 'lyrics' %>
+</div>
