--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,4 +1,6 @@
-<h1>All my tracks:</h1>
+<h1>All my Tracks:</h1>
+
+<%= link_to "Add a Track", new_track_path %>
 
 <% @tracks.each do |t| %>
 <h3><%= link_to t.title, track_path(t.id) %></h3>
