--- a/app/views/lyrics/_form_lyric.html.erb
+++ b/app/views/lyrics/_form_lyric.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@track, @lyric], :remote => true) do |f| %>
+<%= form_for([@track, @lyric]) do |f| %>
     <div class="dropdown">
     <%= f.select :block_type, ["Hook", "Verse"]  %>
     </div>
@@ -12,4 +12,3 @@
       <%= f.submit %>
     </div>
 <%end%>
-
