--- a/app/views/tracks/_form_lyrics.html.erb
+++ b/app/views/tracks/_form_lyrics.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@track, @lyric], :remote => true) do |f| %>
+<%= form_for([@track, @lyric]) do |f| %>
     <div class="dropdown">
     <%= f.select :block_type, ["Hook", "Verse"]  %>
     </div>
