--- a/app/views/lyrics/edit.html.erb
+++ b/app/views/lyrics/edit.html.erb
@@ -1,14 +1,5 @@
-<div id="Track">
-  <%=render :partial => 'tracks' %>
-</div>
-
 <div id="lyric">
-  <%=render :partial => 'form_lyrics' %>
+  <%=render :partial => 'form_lyric' %>
 </div>
 
-<%= link_to "edit", edit_track_path(@track.id) %>
-<%= link_to "delete", @track, :method => :delete ,:confirm => "Are you sure?" %>
 
-<div id="lyrics_partial">
-  <%=render :partial => 'lyrics' %>
-</div>
