--- a/app/views/tracks/_lyrics.html.erb
+++ b/app/views/tracks/_lyrics.html.erb
@@ -4,9 +4,10 @@
     <%= simple_format(lyric.block_type) %>
     <%= simple_format(lyric.content) %>
     <%= link_to "Edit Block", edit_track_lyric_path(@track, lyric)%> |
-    <%= link_to "Delete Block",track_lyric_path(@track, lyric), :method => :delete ,:confirm => "Are you sure?" %>
+    <%= link_to "Delete Block", track_lyric_path(@track, lyric), :method => :delete ,:confirm => "You sure Playa?!" %>
     <br>
     ____
+
   </p>
   </div>
 
