--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -2,6 +2,7 @@
   <%=render :partial => 'tracks' %>
 </div>
 
+<%= link_to "Play",  play_path(@track.id)%>
 <%= link_to "Back", tracks_path %> |
 <%= link_to "Edit Track", edit_track_path(@track.id) %> |
 <%= link_to "Delete Song", @track, :method => :delete ,:confirm => "Are you sure?" %> |
