--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,27 +15,12 @@
 
 
 
-
-#lyric_content {
-  height: 10%;
-  width: 90%;
-}
-
-#track_barindicator {
+/*#track_barindicator {
   width: 100%;
 }
 
 #track_title {
   width: 100%;
-}
-
-form {
-  position: relative;
-}
-
-#save {
-  position: relative;
-  clear: both;
 }
 
 #actions {
@@ -48,3 +33,4 @@ form {
 }
 
 
+*/
