--- a/app/views/lyrics/_form_lyric.html.erb
+++ b/app/views/lyrics/_form_lyric.html.erb
@@ -4,11 +4,10 @@
     </div>
 
     <div class="field">
-      <%= f.label :content %><br/>
       <%= f.text_area :content %>
     </div>
 
-    <div class="actions" id="save">
+    <div class="actions">
       <%= f.submit %>
     </div>
 <%end%>
