--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -2,11 +2,12 @@
   <%=render :partial => 'tracks' %>
 </div>
 
-<%= link_to "Play",  play_path(@track.id)%>
+<%= link_to "Play",  play_path(@track.id)%> |
 <%= link_to "Back", tracks_path %> |
 <%= link_to "Edit Track", edit_track_path(@track.id) %> |
 <%= link_to "Delete Song", @track, :method => :delete ,:confirm => "Are you sure?" %> |
 <%= link_to "Add a Block!", new_track_lyric_path(@track.id) %>
+
 
 <div id="lyrics_partial">
   <%=render :partial => 'lyrics' %>
