--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,12 @@
   </section>
 </nav>
 
+  <div class="row">
+   <div class="large-12 columns">
     <%= yield %>
     <%= javascript_include_tag "application" %>
+  </div>
+</div>
   </body>
 </html>
 
