--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -6,8 +6,18 @@
   </p>
 
   <p>
-    <%= f.label :barindicator %>
-    <%= f.text_field :barindicator %>
+    <%= f.label :hook_bars %>
+    <%= f.text_field :hook_bars %>
+  </p>
+
+  <p>
+    <%= f.label :verse_bars %>
+    <%= f.text_field :verse_bars %>
+  </p>
+
+  <p>
+    <%= f.label :bpm %>
+    <%= f.text_field :bpm %>
   </p>
 
   <div id="save">
