--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -5,7 +5,7 @@
         <h3><%= link_to t.title, track_path(t.id) %></h3>
       </div>
       <div class="large-4 columns">
-        <h4><%= link_to t.barindicator, track_path(t.id) %>BPM</h4>
+        <h4><%= link_to t.bpm, track_path(t.id) %>BPM</h4>
       </div>
 
 <% end %>
