added hook bars

--- a/app/views/tracks/_lyrics.html.erb
+++ b/app/views/tracks/_lyrics.html.erb
@@ -3,8 +3,13 @@
     <p>
     <%= simple_format(lyric.block_type) %>
     <%= simple_format(lyric.content) %>
+    <%= lyric.track.hook_bars %> <br>
+
+    <br>
     <%= link_to "Edit Block", edit_track_lyric_path(@track, lyric)%> |
+
     <%= link_to "Delete Block", track_lyric_path(@track, lyric), :method => :delete ,:confirm => "You sure Playa?!" %>
+
     <br>
     ____
 
