--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 </nav>
 
   <div class="row">
-   <div class="large-12 columns">
+   <div class="small-12 columns">
     <%= yield %>
 
     <%= javascript_include_tag "application" %>
