--- a/app/views/tracks/_tracks.html.erb
+++ b/app/views/tracks/_tracks.html.erb
@@ -1,5 +1,8 @@
+<div class="row">
+<div class="small-9 columns">
   <h1> <%= @track.title %></h1>
-
-  <h3><%=@track.bpm %></h3>
-
-
+</div>
+<div class="small-3 columns">
+  <h2><%=@track.bpm %>BPM</h2>
+</div>
+</div>
