--- a/app/views/tracks/_lyrics.html.erb
+++ b/app/views/tracks/_lyrics.html.erb
@@ -1,14 +1,19 @@
 <% @track.lyrics.each do |lyric| %>
-  <div class="lyric">
-    <p>
-    <%= simple_format(lyric.block_type) %>
-    <%= simple_format(lyric.content) %>
-    <%= link_to "Edit Block", edit_track_lyric_path(@track, lyric)%> |
-    <%= link_to "Delete Block", track_lyric_path(@track, lyric), :method => :delete ,:confirm => "You sure Playa?!" %>
-    <br>
-    ____
-
-  </p>
+  <div class="row">
+    <div class="small-10 columns">
+      <div class="lyric">
+        <%= simple_format(lyric.block_type) %>
+        <%= simple_format(lyric.content) %>
+      <div class="small-2 columns">
+      <%= lyric.track.hook_bars %>
+      <br>
+        <%= link_to "Edit Block", edit_track_lyric_path(@track, lyric)%> |
+        <%= link_to "Delete Block", track_lyric_path(@track, lyric), :method => :delete ,:confirm => "You sure Playa?!" %>
+        <br>
+        </div>
+      </div>
+    </div>
   </div>
-
 <% end %>
+
+
