--- a/app/views/tracks/_tracks.html.erb
+++ b/app/views/tracks/_tracks.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-<div class="small-9 columns">
-  <h1> <%= @track.title %></h1>
-</div>
-<div class="small-3 columns">
-  <h2><%=@track.bpm %>BPM</h2>
-</div>
+  <div class="small-9 columns">
+    <h1> <%= @track.title %></h1>
+  </div>
+  <div class="small-3 columns">
+    <h1 id="bpmheader"><%=@track.bpm %>BPM</h1>
+  </div>
 </div>
