--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,14 +1,30 @@
-<div id="Track">
-  <%=render :partial => 'tracks' %>
+<div class="row">
+  <div class="small-10 columns">
+   <div id="Track">
+      <%=render :partial => 'tracks' %>
+    </div>
+  </div>
 </div>
 
-<%= link_to "Play",  play_path(@track.id)%> |
-<%= link_to "Back", tracks_path %> |
-<%= link_to "Edit Track", edit_track_path(@track.id) %> |
-<%= link_to "Delete Song", @track, :method => :delete ,:confirm => "Are you sure?" %> |
-<%= link_to "Add a Block!", new_track_lyric_path(@track.id) %>
+<div class="row">
 
-<div id="lyrics_partial">
-  <%=render :partial => 'lyrics' %>
+    <div class="small-8 columns">
+      <%= link_to "Play",  play_path(@track.id)%> |
+      <%= link_to "Back", tracks_path %> |
+      <%= link_to "Edit Track", edit_track_path(@track.id) %> |
+      <%= link_to "Delete Song", @track, :method => :delete ,:confirm => "Are you sure?" %> |
+      <%= link_to "Add a Block!", new_track_lyric_path(@track.id) %>
+    </div>
+  </div>
+
+<br>
+
+<div class="row">
+<!--   <div class="small-3 columns">
+  </div> -->
+  <div class="small-9 columns">  
+    <div id="lyrics_partial">
+      <%=render :partial => 'lyrics' %>
+    </div>
+  </div>
 </div>
-
