--- a/app/assets/stylesheets/play.css
+++ b/app/assets/stylesheets/play.css
@@ -1,3 +1,19 @@
-#wrapper {
-	position: absolute;
+.song_container { 
+  border: 1px solid black;
+  width:300px;
+  height: 1000px;    
+  overflow: hidden;
+  position: relative;
+  padding: 6px;
+}
+
+.song {
+  position: absolute;  
+  left: 10px;
+  top: 10px;
+}
+
+
+#leftside{
+    float: left;
 }
