--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -504,16 +504,16 @@ $button-font-color: #ffffff;
 // $form-label-font-size: rem-calc(14);
 // $form-label-font-weight: normal;
 // $form-label-line-height: 1.5;
-$form-label-font-color: scale-color(#000000, $lightness: 30%);
+$form-label-font-color: #ffffff;
 // $form-label-small-transform: capitalize;
 // $form-label-bottom-margin: 0;
 // $input-font-family: inherit;
 // $input-font-color: rgba(0,0,0,0.75);
 // $input-font-size: rem-calc(14);
-// $input-bg-color: #fff;
-// $input-focus-bg-color: scale-color(#fff, $lightness: -2%);
-// $input-border-color: scale-color(#fff, $lightness: -20%);
-// $input-focus-border-color: scale-color(#fff, $lightness: -40%);
+$input-bg-color: #FFE900;
+$input-focus-bg-color: scale-color(#FFE900, $lightness: +50%);
+$input-border-color: scale-color(#000000, $lightness: -20%);
+$input-focus-border-color: scale-color(#FFE900, $lightness: -40%);
 // $input-border-style: solid;
 // $input-border-width: 1px;
 // $input-border-radius: $global-radius;
@@ -1180,12 +1180,12 @@ $topbar-bg: $topbar-bg-color;
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-// $topbar-dropdown-bg: #333;
+  $topbar-dropdown-bg: #ffffff;
 // $topbar-dropdown-link-color: #fff;
 // $topbar-dropdown-link-bg: #333;
 // $topbar-dropdown-link-weight: normal;
 // $topbar-dropdown-toggle-size: 5px;
-// $topbar-dropdown-toggle-color: #fff;
+$topbar-dropdown-toggle-color: #ffffff;
 // $topbar-dropdown-toggle-alpha: 0.4;
 
 // Set the link colors and styles for top-level nav
@@ -1207,20 +1207,20 @@ $topbar-link-bg-active-hover: scale-color(#FFD905, $lightness: -0%);
 // $topbar-button-font-size: 0.75rem;
 // $topbar-button-top: 7px;
 
-// $topbar-dropdown-label-color: #777;
+// $topbar-dropdown-label-color: #000000;
 // $topbar-dropdown-label-text-transform: uppercase;
 // $topbar-dropdown-label-font-weight: bold;
 // $topbar-dropdown-label-font-size: rem-calc(10);
 // $topbar-dropdown-label-bg: #333;
 
 // Top menu icon styles
-// $topbar-menu-link-transform: uppercase;
-// $topbar-menu-link-font-size: rem-calc(13);
-// $topbar-menu-link-weight: bold;
-// $topbar-menu-link-color: #fff;
-// $topbar-menu-icon-color: #fff;
-// $topbar-menu-link-color-toggled: #888;
-// $topbar-menu-icon-color-toggled: #888;
+$topbar-menu-link-transform: lowercase;
+$topbar-menu-link-font-size: rem-calc(16);
+$topbar-menu-link-weight: bold;
+$topbar-menu-link-color: #000000;
+$topbar-menu-icon-color: #000000;
+$topbar-menu-link-color-toggled: #ffffff;
+$topbar-menu-icon-color-toggled: #ffffff;
 
 // Transitions and breakpoint styles
 // $topbar-transition-speed: 300ms;
