fixed button and colors

--- a/app/views/lyrics/_form_lyric.html.erb
+++ b/app/views/lyrics/_form_lyric.html.erb
@@ -7,7 +7,7 @@
       <%= f.text_area :content %>
     </div>
 
-    <div class="actions">
-      <%= f.submit %>
+    <div class="actions" >
+      <%= f.submit "Save Block" ,:class => 'button [tiny small large]' %>
     </div>
 <%end%>
