--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -20,12 +20,12 @@
     <%= f.text_field :bpm %>
   </p>
 
-  <div id="save">
-    <%= f.submit "Save Track" %>
+  <div class="actions">
+    <%= f.submit "Save Track", :class => 'button [tiny small large]' %>
   </div>
 
 <%end%>
 
-<div id="track">
+<!-- <div id="track">
   <%=render :partial => 'tracks' %>
-</div>
+</div> -->
