--- a/app/views/tracks/_tracks.html.erb
+++ b/app/views/tracks/_tracks.html.erb
@@ -3,6 +3,7 @@
     <h1> <%= @track.title %></h1>
   </div>
   <div class="small-3 columns">
-    <h1 id="bpmheader"><%=@track.bpm %></h1>
+    <h1 id="bpmheader"><%=@track.bpm %><span id="bpm">BPM</span></h1>
+
   </div>
 </div>
