--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,6 +42,10 @@ html, body
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+#bpm {
+  color: #FFE900;
+  font-size: 30px;
+}
 
 
 /*#track_barindicator {
