--- a/app/views/tracks/_form_lyrics.html.erb
+++ b/app/views/tracks/_form_lyrics.html.erb
@@ -8,7 +8,7 @@
       <%= f.text_area :content %>
     </div>
 
-    <div class="actions" id="save">
+    <div class="actions">
       <%= f.submit %>
     </div>
 
