--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -54,7 +54,7 @@ $font-smoothing: antialiased;
 // $default-float: left;
 
 // We use these as default colors throughout
-$primary-color: #FFE900;
+$primary-color: #FFD905;
 $secondary-color: #000000;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
@@ -350,8 +350,8 @@ $button-font-color: #ffffff;
 // We use these to control button border styles.
 // $button-border-width: 0px;
 // $button-border-style: solid;
-// $bg: $primary-color;
-// $button-border-color: scale-color($bg, $lightness: $button-function-factor);
+$bg: $primary-color;
+$button-border-color: #000000;
 
 // We use this to set the default radius used throughout the core.
 // $button-radius: $global-radius;
@@ -1180,7 +1180,7 @@ $topbar-bg: $topbar-bg-color;
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-  $topbar-dropdown-bg: #ffffff;
+$topbar-dropdown-bg: #ffffff;
 // $topbar-dropdown-link-color: #fff;
 // $topbar-dropdown-link-bg: #333;
 // $topbar-dropdown-link-weight: normal;
