new bpm tied to play speed

--- a/app/views/tracks/_lyrics.html.erb
+++ b/app/views/tracks/_lyrics.html.erb
@@ -21,7 +21,7 @@
         </div>
 
         <div class="field">
-            <%= text_area_tag :content %>
+            <%= f.text_area :content %>
         </div>
 
         <div class="actions">
