--- a/app/views/tracks/play.html.erb
+++ b/app/views/tracks/play.html.erb
@@ -4,7 +4,7 @@
 
 <%= link_to "Back to Track", track_path %>
 </br>
-
+<input type="hidden" id="bpm_holder" value="<%= @track.bpm %>">
 
 <div id="leftside">
   <div class="song_container" id="playsong">
