--- a/app/views/tracks/play.html.erb
+++ b/app/views/tracks/play.html.erb
@@ -9,6 +9,8 @@
 <div id="leftside">
   <div class="song_container" id="playsong">
     <div class="song">
+   <!--   <div class="bpm_calc">
+        <% @track.bpm %> -->
       <div class="text">
         <div class="complete_lyrics">
           <% @track.lyrics.each do |lyric| %>
@@ -21,6 +23,7 @@
 
           <% end %>
         </div>
+      </div>
       </div>
     </div>
   </div>
