--- a/app/views/tracks/play.html.erb
+++ b/app/views/tracks/play.html.erb
@@ -14,7 +14,7 @@
           <% @track.lyrics.each do |lyric| %>
           <div class="lyric">
             <p>
-              <%= simple_format(lyric.block_type) %>
+              -<%= lyric.block_type %>-
               <%= simple_format(lyric.content) %>
             </p>
           </div>
