--- a/app/views/tracks/_lyrics.html.erb
+++ b/app/views/tracks/_lyrics.html.erb
@@ -1,6 +1,6 @@
 <br>
     <% @track.lyrics.each do |lyric| %>
-        --<%= lyric.block_type %>-- 
+        -<%= lyric.block_type %>-
             <br><br>
         <%= lyric.content %>
             <br><br>
@@ -9,9 +9,6 @@
         <%= link_to "Edit Block", edit_track_lyric_path(@track, lyric)%> |
         <%= link_to "Delete Block", track_lyric_path(@track, lyric), :method => :delete ,:confirm => "You sure Playa?!" %>
         <br><br>
-
-
-
 
     <% end %>
         <div id= "new_lyrics">
@@ -26,7 +23,7 @@
         </div>
 
         <div class="actions">
-            <%= f.submit %>
+            <%= f.submit "Save Block", :class => 'button [tiny small large]' %>
         </div>
 
     <%end%>
