--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -19,7 +19,10 @@
 
 <br>
 <div class="row">
+  <div></div>
+
 <div class="small-2 columns"></div>
+
 <div class="small-10 columns">
     <div id="lyrics_partial">
       <%=render :partial => 'lyrics' %>
