added lines, took away centering

--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -7,7 +7,6 @@
 </div>
 
 <div class="row">
-
     <div class="small-10 columns">
       <%= link_to "Play",  play_path(@track.id)%> |
       <%= link_to "Back", tracks_path %> |
@@ -18,13 +17,11 @@
   </div>
 
 <br>
+
 <div class="row">
-  <div></div>
-
-<div class="small-2 columns"></div>
-
-<div class="small-10 columns">
+  <div class="small-10 columns">
     <div id="lyrics_partial">
       <%=render :partial => 'lyrics' %>
     </div>
-</div></div>
+  </div>
+</div>
