--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,46 +10,48 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
- <body>
-<div class="fixed">
-    <nav class="top-bar" data-topbar>
-     <ul class="title-area">
-        <li class="name">
-          <h1><%= link_to "mobilemc", tracks_path %></h1>
-        </li>
-         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-        <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a>
+  
+  <body>
+  
+  <div class="fixed">
+      <nav class="top-bar" data-topbar>
+       <ul class="title-area">
+          <li class="name">
+            <h1><%= link_to "mobilemc", tracks_path %></h1>
+          </li>
+           <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+          <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
+        </ul>
+    </ul>
+
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li class="active"><%= link_to "create track", new_track_path %></li>
+        <li class="has-dropdown">
+         <!--  <a href="#">Right Button Dropdown</a> -->
+          <!-- <ul class="dropdown"> -->
+            <!-- <li><a href="#">First link in dropdown</a></li> -->
+          </ul>
         </li>
       </ul>
-<!--   </ul> -->
 
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
-      <li class="active"><%= link_to "create track", new_track_path %></li>
-      <li class="has-dropdown">
-       <!--  <a href="#">Right Button Dropdown</a> -->
-        <!-- <ul class="dropdown"> -->
-          <!-- <li><a href="#">First link in dropdown</a></li> -->
-        </ul>
-      </li>
-    </ul>
+      <!-- Left Nav Section -->
+      <ul class="left">
+        <li><%= link_to "tracks", tracks_path %></li>
+      </ul>
+    </section>
+    </nav>
+   </div>
+   
+   <br><br><br>
 
-    <!-- Left Nav Section -->
-    <ul class="left">
-      <li><%= link_to "tracks", tracks_path %></li>
-    </ul>
-  </section>
-  </nav>
- </div>
- <br><br><br>
-    <div class="row">
-      <div class="small-12 columns">
-        <%= yield %>
-        <%= javascript_include_tag "application" %>
+      <div class="row">
+        <div class="small-12 columns">
+          <%= yield %>
+          <%= javascript_include_tag "application" %>
+        </div>
       </div>
-    </div>
- 
   </body>
 </html>
 
